# sfo2xml

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  ThirdPartyLicenses.txt
Source/: Helpers.h  SFOFile.cpp  SFOFile.h  main.cpp  sfo2xml.sln  sfo2xml.vcxproj  sfo2xml.vcxproj.filters
